# Sys-TM

./: CMakeLists.txt  README.md
PyLiblda/: PyLiblda.py
src/corpus/: corpus.cpp
src/include/corpus/: corpus.h
src/include/model/: ctm.h  doc_first_base.h  jointlda.h  lda.h  stm.h  tot.h  word_first_base.h
src/include/result/: lda_result.h  result_base.h
src/include/util/: alias_table.h  atomic_integer.h  ftree.h  random.h  sparse_counter.h
src/include/util/numeric/: logdet.h
src/main/: main.cpp
src/model/: ctm.cpp  doc_first_base.cpp  lda.cpp  stm.cpp  tot.cpp  word_first_base.cpp
src/python/: liblda_wrapper.cpp
